<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daxh.explore.madtest01.activities.MainActivity">

    <Button
        android:id="@+id/btFind1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_find_persons_with_conf_street_names"/>

    <Button
        android:id="@+id/btFind2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_find_persons_with_streets_containing_3"/>

    <Button
        android:id="@+id/btFind3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_find_configured_streets_of_persons_older_than_4"/>

    <Button
        android:id="@+id/btMakeEveryoneOlder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_make_everyone_older"/>

    <Button
        android:id="@+id/btMakeEveryoneOlderShowAges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_make_everyone_older_show_ages"/>

    <Button
        android:id="@+id/btMakeEveryoneOlderShowIntStreamAges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_make_everyone_older_show_int_stream_ages"/>

    <Button
        android:id="@+id/btAverageAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_average_age"/>
</LinearLayout>
