<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daxh.explore.madtest01.activities.MainActivity">

    <Button
        android:id="@+id/btLrtWithResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_long_run_task_with_res"/>

    <Button
        android:id="@+id/btLrtVoid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_long_run_void_task"/>

    <Button
        android:id="@+id/btFewSerialLrts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_few_long_running_related_parallel_tasks"/>

    <Button
        android:id="@+id/btFewParallelLrts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_few_long_running_related_serial_and_parallel_tasks"/>

    <Button
        android:id="@+id/btDownstreamExceptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_downstream_all_exceptions_to_subscriber"/>

    <Button
        android:id="@+id/btDetailedErrorHandling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_detailed_error_handling"/>
</LinearLayout>
