<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daxh.explore.madtest01.activities.MainActivity">

    <Button
        android:id="@+id/btOptionals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_optionals"/>

    <Button
        android:id="@+id/btLambdas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_lambdas"/>

    <Button
        android:id="@+id/btStreams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_streams"/>

    <Button
        android:id="@+id/btBasicRx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_basic_rx"/>

</LinearLayout>
