<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daxh.explore.madtest01.MainActivity">

    <Button
        android:id="@+id/btCreateOptionals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_create_optionals"/>

    <Button
        android:id="@+id/btUseDefaultValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_use_default_value"/>

    <Button
        android:id="@+id/btNonNullChaining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_non_null_chaining"/>

    <Button
        android:id="@+id/btPerformIfExists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_perform_if_exists"/>

</LinearLayout>
