<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daxh.explore.madtest01.activities.MainActivity">

    <Button
        android:id="@+id/btAsVars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_lambdas_as_variables"/>

    <Button
        android:id="@+id/btAndClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_lambdas_and_classes"/>

    <Button
        android:id="@+id/btAsArgs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_lambdas_as_args"/>
</LinearLayout>
