<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.daxh.explore.madtest01.activities.MainActivity">

    <TextView
        android:id="@+id/tvPurpose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:text="@string/rx_dialogs_activity_purpose"/>

    <Button
        android:id="@+id/btStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPurpose"
        android:layout_toLeftOf="@+id/btSwitch"
        android:layout_toStartOf="@+id/btSwitch"
        android:text="@string/signin"/>

    <Button
        android:id="@+id/btSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPurpose"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:minWidth="20dp"
        android:text="@string/bt_switch"/>

</RelativeLayout>
